# tmp

./: .gitignore  Cargo.toml  README.md
configs/: demo.json  only_t.json  reconstruct_test.json  solid_test.json  test.json  without_n.json
configs/results/: big_secret.json  biggest_secret.json  mini_secret.json  solid_test.json  solid_test_recovering  solid_test_recovering.json
interface/: Cargo.toml
interface/src/: main.rs
nodes/: Cargo.toml  rustfmt.toml
nodes/src/: lib.rs  main.rs
nodes/src/crypto/: mod.rs
nodes/src/crypto/kzg10/: data_structures.rs  mod.rs
nodes/src/protocols/: avss_simpl.rs  mod.rs
src/: lib.rs
src/config_treatment/: args.rs  fields.rs  gnu.rs  include.rs  mod.rs  result_fields.rs  subargs.rs  variations.rs
